--- a/index.html
+++ b/index.html
@@ -5,208 +5,196 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Niko Aaltonen — Portfolio</title>
 <style>
-:root{
-  --ink:#e9ebef; --muted:#a9adb6; --stroke:rgba(255,255,255,.08);
-  --panel-tint: rgba(255,255,255,.03);
+:root {
+  --ink: #e9ebef;
+  --muted: #a9adb6;
+  --stroke: rgba(255, 255, 255, .08);
+  --panel: rgba(20, 20, 24, .55);
+  --c-bio: linear-gradient(120deg, #ff5f6d, #ffc371);
+  --c-soolo: linear-gradient(120deg, #36d1dc, #5b86e5);
+  --c-teatteri: linear-gradient(120deg, #ff6a00, #ee0979);
+  --c-elektro: linear-gradient(120deg, #8e2de2, #4a00e0);
+  --c-yhteys: linear-gradient(120deg, #56ab2f, #a8e063);
+}
+* { box-sizing: border-box; }
+html, body { height: 100%; margin: 0; }
+body {
+  color: var(--ink);
+  background: #0b0d10;
+  font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+  line-height: 1.55;
+  transition: background 2s ease;
 }
 
-/* ====== Base ====== */
-*{box-sizing:border-box}
-html,body{height:100%}
-body{
-  margin:0;
-  color:var(--ink);
-  background: var(--bg);
-  background-size: 400% 400%;
-  animation: bgMove 15s ease infinite;
-  font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-  line-height:1.55;
-  transition: background 0.6s ease;
+.wrap {
+  display: grid;
+  grid-template-columns: 260px 1fr;
+  gap: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+@media (max-width: 900px) {
+  .wrap { grid-template-columns: 1fr; padding: 12px; }
 }
 
-@keyframes bgMove {
-  0%   { background-position: 0% 50%; }
-  50%  { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
+.sidebar {
+  position: sticky;
+  top: 16px;
+  align-self: start;
+  display: grid;
+  gap: 10px;
+}
+.side-card {
+  background: var(--panel);
+  border: 1px solid var(--stroke);
+  border-radius: 14px;
+  padding: 12px;
+}
+.side-grid { display: grid; gap: 10px; }
+.cat {
+  display: block;
+  text-decoration: none;
+  color: var(--ink);
+  font-weight: 600;
+  padding: 12px 14px;
+  border-radius: 12px;
+  border: 1px solid var(--stroke);
+  background: rgba(255, 255, 255, .04);
+  transition: .3s transform, .3s background, .3s border-color;
+}
+.cat:hover {
+  transform: translateY(-2px);
+  background: rgba(255, 255, 255, .08);
+  border-color: rgba(255, 255, 255, .14);
 }
 
-/* ====== Category themes with gradients ===== */
-body.theme-bio {
-  --bg: linear-gradient(-45deg, #0b0d10, #1e1f23, #0b0d10, #2b2d31);
-  --panel-tint: rgba(255,255,255,.03);
-}
-body.theme-soolo {
-  --bg: linear-gradient(-45deg, #002b55, #0055aa, #003366, #0099ff);
-  --panel-tint: rgba(0,102,255,.20);
-}
-body.theme-teatteri {
-  --bg: linear-gradient(-45deg, #330000, #660000, #330000, #ff2222);
-  --panel-tint: rgba(255,68,68,.25);
-}
-body.theme-elek {
-  --bg: linear-gradient(-45deg, #180033, #300066, #180033, #9f66ff);
-  --panel-tint: rgba(160,120,255,.25);
-}
-body.theme-yhteys {
-  --bg: linear-gradient(-45deg, #00332e, #00665d, #00332e, #00e0d0);
-  --panel-tint: rgba(64,224,208,.25);
-}
-
-/* ====== Layout ====== */
-.wrap{
-  display:grid; grid-template-columns:260px 1fr; gap:20px;
-  max-width:1200px; margin:0 auto; padding:20px;
-}
-@media (max-width:900px){
-  .wrap{grid-template-columns:1fr; padding:12px}
-}
-
-/* Sidebar */
-.sidebar{
-  position:sticky; top:16px; align-self:start;
-  display:grid; gap:10px;
-}
-.side-card{
-  background:var(--panel-tint); border:1px solid var(--stroke); border-radius:14px; padding:12px;
-}
-.side-grid{display:grid; gap:10px}
-.cat{
-  display:block; text-decoration:none; color:var(--ink); font-weight:600;
-  padding:12px 14px; border-radius:12px; border:1px solid var(--stroke);
-  background:rgba(255,255,255,.04); transition:.2s transform,.2s background,.2s border-color;
-}
-.cat:hover{transform:translateY(-2px); background:rgba(255,255,255,.08); border-color:rgba(255,255,255,.14)}
-
-/* Content panels */
 .panel, .frame {
-  background: var(--panel-tint);
-  border:1px solid var(--stroke);
-  border-radius:14px;
-  padding:18px;
+  background: var(--panel);
+  border: 1px solid var(--stroke);
+  border-radius: 14px;
+  padding: 18px;
   backdrop-filter: blur(8px);
-  transition: background 0.6s ease;
-}
-.section{margin-bottom:20px}
-
-/* Hero slideshow */
-.hero{
-  border-radius:14px; overflow:hidden; position:relative; height:min(48vh,520px);
-  background:#111; border:1px solid var(--stroke);
-}
-.slide{
-  position:absolute; inset:0; opacity:0; transition:opacity 1200ms ease-in-out;
-  background-position:center; background-size:contain; background-repeat:no-repeat;
-  filter:grayscale(18%) contrast(112%) brightness(82%);
-}
-.slide.active{opacity:1}
-.hero::after{
-  content:""; position:absolute; inset:0;
-  background:linear-gradient(180deg, rgba(11,13,16,.35), rgba(11,13,16,.75) 65%, rgba(11,13,16,.9));
+  transition: border-color 2s ease, box-shadow 2s ease, background 2s ease;
 }
 
-/* Headings */
-h1,h2,h3{margin:0 0 .4rem}
-h1{font-size:clamp(28px,4.8vw,42px)}
-h2{font-size:clamp(20px,3.2vw,26px)}
-h3{font-size:clamp(16px,2.6vw,20px)}
-p{margin:.5rem 0}
+.section { margin-bottom: 20px; }
 
-/* Wavesurfer players */
-.ws-section{margin-top:18px}
-.ws-card{
-  display:grid; gap:10px; padding:14px; border-radius:12px;
-  border:1px solid var(--stroke); background:rgba(255,255,255,.04);
+.hero {
+  border-radius: 14px;
+  overflow: hidden;
+  position: relative;
+  height: min(48vh, 520px);
+  border: 1px solid var(--stroke);
+  transition: background 2s ease;
 }
-.ws-row{display:grid; grid-template-columns:auto 1fr auto; gap:12px; align-items:center}
-.ws-title{font-weight:600; opacity:.95}
-.ws-play{
-  width:44px; height:44px; border-radius:10px; border:1px solid var(--stroke);
-  background:rgba(255,255,255,.06); color:var(--ink); font-size:18px; cursor:pointer
+.slide {
+  position: absolute;
+  inset: 0;
+  opacity: 0;
+  transition: opacity 1200ms ease-in-out;
+  background-position: center;
+  background-size: cover;
 }
-.ws-play:hover{background:rgba(255,255,255,.1)}
-.ws-wave{height:64px}
-.ws-time{font-variant-numeric:tabular-nums; opacity:.85}
-.ws-canvas{position:relative}
-.ws-progress{position:absolute; inset:0 0 0 0; opacity:.9; pointer-events:none; mix-blend-mode:screen}
-.theme-selli .ws-progress{background:red}
-.theme-meri  .ws-progress{background:orange}
-.theme-mimmi .ws-progress{background:turquoise}
+.slide.active { opacity: 1; }
+.hero::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(180deg, rgba(11, 13, 16, .35), rgba(11, 13, 16, .75) 65%, rgba(11, 13, 16, .9));
+}
 
-.muted{color:var(--muted)}
-.hr{border:none; border-top:1px solid var(--stroke); margin:12px 0}
+h1, h2, h3 { margin: 0 0 .4rem; }
+h1 { font-size: clamp(28px, 4.8vw, 42px); }
+h2 { font-size: clamp(20px, 3.2vw, 26px); }
+p { margin: .5rem 0; }
+
+.muted { color: var(--muted); }
+.hr { border: none; border-top: 1px solid var(--stroke); margin: 12px 0; }
 </style>
 </head>
-<body class="theme-bio">
+<body>
 
 <div class="wrap">
-  <!-- Sidebar -->
   <aside class="sidebar">
     <div class="side-card">
       <div class="side-grid">
-        <a class="cat" href="#bio" onclick="setTheme('bio')">Bio</a>
-        <a class="cat" href="#soolo" onclick="setTheme('soolo')">Soolotuotanto</a>
-        <a class="cat" href="#teatteri" onclick="setTheme('teatteri')">Teatteri / Äänisuunnittelu</a>
-        <a class="cat" href="#elek" onclick="setTheme('elek')">Elektroninen / Kokeellinen</a>
-        <a class="cat" href="#yhteys" onclick="setTheme('yhteys')">Yhteystiedot</a>
+        <a class="cat" data-theme="bio" href="#bio">Bio</a>
+        <a class="cat" data-theme="soolo" href="#soolotuotanto">Soolotuotanto</a>
+        <a class="cat" data-theme="teatteri" href="#teatteri">Teatteri / Äänisuunnittelu</a>
+        <a class="cat" data-theme="elektro" href="#elektro">Elektroninen / Kokeellinen</a>
+        <a class="cat" data-theme="yhteys" href="#yhteys">Yhteystiedot</a>
       </div>
     </div>
   </aside>
 
-  <!-- Main -->
   <main>
-
-    <!-- Hero slideshow -->
     <section class="section">
-      <div class="hero">
+      <div class="hero" id="hero" style="background: var(--c-bio);">
         <div class="slide active" style="background-image:url('images/Kuva 1.jpeg')"></div>
         <div class="slide" style="background-image:url('images/Kuva 2.jpeg')"></div>
         <div class="slide" style="background-image:url('images/Kuva 3.jpeg')"></div>
       </div>
     </section>
 
-    <!-- Bio -->
     <section id="bio" class="section panel">
       <h1>Niko Aaltonen</h1>
       <p class="muted">Säveltäjä • äänisuunnittelija • monialainen taiteilija</p>
       <hr class="hr">
-      <p>Niko Aaltonen on säveltäjä, äänisuunnittelija ja monialainen taiteilija Turusta...</p>
+      <p>Niko Aaltonen on säveltäjä, äänisuunnittelija ja monialainen taiteilija Turusta. Hänen taustansa musiikkituotannon ja teatterin parissa näkyy työssä, jossa yhdistyvät tunnelmalliset äänimaisemat ja vahva emotionaalinen syvyys. Niko luo musiikkia ja äänisuunnittelua, jotka kertovat tarinoita, herättävät muistoja ja tukevat esitysten visuaalista ja dramaturgista kokonaisuutta. Hänen äänimaailmansa liikkuvat klassisen musiikin, pop/rockin ja elektronisen kokeellisuuden välillä – rajoja pelottomasti rikkoen.</p>
+      <p>Nikon musiikillinen polku alkoi jo nuorena, kun hän osti ensimmäisen kitaransa. Vuosien varrella hän on syventynyt intohimoisesti musiikin eri osa-alueisiin ja opiskellut laajasti useita genrejä ja soittimia, kuten bassoa, rumpuja ja laulua. Hän valmistui muusikoksi Turun konservatoriosta ja palveli tämän jälkeen Puolustusvoimien varusmiessoittokunnassa, josta hän valmistui aliupseerina. Tällä hetkellä Niko opiskelee musiikkipedagogiksi ja jatkaa monipuolista musiikin tekemistä eri muodoissa.</p>
     </section>
 
-    <!-- Example category sections -->
-    <section id="soolo" class="section panel">
+    <section id="soolotuotanto" class="section panel">
       <h2>Soolotuotanto</h2>
-      <p>Tulossa...</p>
+      <p class="muted">Tulossa...</p>
     </section>
 
     <section id="teatteri" class="section panel">
       <h2>Teatteri / Äänisuunnittelu</h2>
-      <p>Tulossa...</p>
+      <p class="muted">Tulossa...</p>
     </section>
 
-    <section id="elek" class="section panel">
+    <section id="elektro" class="section panel">
       <h2>Elektroninen / Kokeellinen</h2>
-      <p>Tulossa...</p>
+      <p class="muted">Tulossa...</p>
     </section>
 
-    <!-- Yhteys -->
     <section id="yhteys" class="section panel">
       <h2>Yhteystiedot</h2>
       <p><a href="mailto:sinun.sahkoposti@esimerkki.com" style="color:var(--ink)">sinun.sahkoposti@esimerkki.com</a></p>
     </section>
-
   </main>
 </div>
 
-<!-- JS -->
 <script>
 const slides = document.querySelectorAll('.slide');
 let i = 0;
-setInterval(()=>{ slides[i].classList.remove('active'); i=(i+1)%slides.length; slides[i].classList.add('active'); },7000);
+setInterval(() => {
+  slides[i].classList.remove('active');
+  i = (i + 1) % slides.length;
+  slides[i].classList.add('active');
+}, 7000);
 
-function setTheme(name) {
-  document.body.className = 'theme-' + name;
-}
+const themes = {
+  bio: 'var(--c-bio)',
+  soolo: 'var(--c-soolo)',
+  teatteri: 'var(--c-teatteri)',
+  elektro: 'var(--c-elektro)',
+  yhteys: 'var(--c-yhteys)'
+};
+
+document.querySelectorAll('.cat').forEach(link => {
+  link.addEventListener('click', () => {
+    const theme = link.dataset.theme;
+    document.body.style.background = themes[theme];
+    document.getElementById('hero').style.background = themes[theme];
+    document.querySelectorAll('.panel').forEach(p => {
+      p.style.borderColor = 'rgba(255,255,255,.2)';
+      p.style.boxShadow = `0 0 20px ${themes[theme]}`;
+    });
+  });
+});
 </script>
-
 </body>
 </html>
